# AlgoFainessExam

./: README.md  contribution_statement_template.xlsx  pyproject.toml
data/: all_student_and_socio_economic.csv  all_students_and_SES.csv  all_survey_answers.csv
src/: EDA.ipynb  FairPCA.ipynb  Handin.ipynb  eda1.ipynb  model_explainability.ipynb  ses_inference.ipynb
